<resources>
    <string name="app_name">Jasa Online</string>
    <string name="beranda">Beranda</string>
    <string name="jasa_pengguna">Jasa Pengguna</string>
    <string name="pengaturan_akun">Pengaturan Akun</string>
    <string name="profil">Profil</string>
    <string name="logout">Logout</string>
    <string name="nama_header">Nama di Header</string>
    <string name="email_header">Email di Header</string>
    <string name="image_header">Image header</string>
    <string name="fragment_beranda">Ini fragment Beranda Pengguna</string>
    <string name="fragment_jasa">Ini fragment Jasa Pengguna</string>
    <string name="fragment_profil">Ini fragment Profil Pengguna</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--    splash screen-->
    <string name="icon_url">https://www.flaticon.com/</string>
    <!--    form login-->
    <string name="judul_activity_login">Masuk</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="judul_daftar">Tidak punya akun, <b>Daftar</b></string>
    <string name="lupa_password">Lupa <b>password</b></string>
    <string name="atau_login">Atau login dengan</string>
    <!--form register-->
    <string name="nama">Nama</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <array name="jenis_kelamin">
        <item>Jenis Kelamin</item>
        <item>Pria</item>
        <item>Wanita</item>
    </array>
    <string name="no_hp">Nomor HP</string>
    <string name="alamat">Alamat</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="submit">Submit</string>
    <!--fragment profile-->
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="waktu_sesi">Waktu Sesi</string>
    <string name="myname">Ziana Aulia</string>
    <string name="mybirth">26 Mei 2002</string>
    <string name="mygender">Wanita</string>
    <string name="myphone">0852-1595-3025</string>
    <string name="myaddres">Jl. Panglima Minal, Desa Senggoro, Bengkalis - Riau</string>
    <string name="myemail">zianaaulia@gmail.com</string>
    <string name="mysession">09-10-2018 09:00:00</string>
    <string name="edit_profil">Ubah Profil</string>
    <string name="hapus_akun">Hapus Akun</string>
    <!--    form edit profile-->
    <string name="judul_password">Silahkan kosongkan password, jika tidak mau mengubahnya!</string>
    <!--    jasa list-->
    <string name="service_ac_barokah">Service AC Barokah</string>
    <string name="deskripsi_ringkas">Melayani service ac rumah, kantor, gedung dll</string>
    <string name="rating">4</string>
</resources>