<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/repeat_background"
    android:padding="10dp"
    tools:context=".fragments.ProfileFragment">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        app:cardElevation="5dp"
        app:cardCornerRadius="20dp"
        android:layout_above="@+id/llButton"
        android:layout_marginBottom="10dp">
        <ScrollView
            android:id="@+id/svData"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:gravity="center_vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/imgLogo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/technology" />
                <TableLayout
                    android:id="@+id/tblData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp">
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tvJudulNama"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/nama"
                            android:textSize="15sp"

                            android:layout_weight=".35"/>
                        <TextView
                            android:id="@+id/tvNama"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/myname"
                            android:textSize="15sp"
                            android:layout_weight=".65"/>

                    </TableRow>
                    <TableRow
                        android:layout_marginTop="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tvJudulTanggalLahir"

                            android:layout_width="0dp"

                            android:layout_height="wrap_content"
                            android:text="@string/tanggal_lahir"
                            android:textSize="15sp"
                            android:layout_weight=".35"/>

                        <TextView
                            android:id="@+id/tvTanggalLahir"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/mybirth"
                            android:textSize="15sp"
                            android:layout_weight=".65"/>

                    </TableRow>
                    <TableRow
                        android:layout_marginTop="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/tvJudulJenisKelamin"

                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/jenis_kelamin"
                            android:textSize="15sp"
                            android:layout_weight=".35"/>

                        <TextView
                            android:id="@+id/tvJenisKelamin"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/mygender"
                            android:textSize="15sp"
                            android:layout_weight=".65"/>

                    </TableRow>
                    <TableRow
                        android:layout_marginTop="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tvJudulNomorHP"
                            android:layout_width="0dp"

                            android:layout_height="wrap_content"
                            android:text="@string/no_hp"
                            android:textSize="15sp"
                            android:layout_weight=".35"/>
                        <TextView
                            android:id="@+id/tvNomorHP"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/myphone"
                            android:textSize="15sp"
                            android:layout_weight=".65"/>

                    </TableRow>
                    <TableRow
                        android:layout_marginTop="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tvJudulAlamat"
                            android:layout_width="0dp"

                            android:layout_height="wrap_content"
                            android:text="@string/alamat"
                            android:textSize="15sp"
                            android:layout_weight=".35"/>

                        <TextView
                            android:id="@+id/tvAlamat"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/myaddres"
                            android:textSize="15sp"
                            android:maxLines="3"

                            android:scrollHorizontally="false"
                            android:scrollbars="vertical"
                            android:layout_weight=".65"/>

                    </TableRow>
                    <TableRow
                        android:layout_marginTop="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tvJudulEmail"
                            android:layout_width="0dp"

                            android:layout_height="wrap_content"
                            android:text="@string/email"
                            android:textSize="15sp"
                            android:layout_weight=".35"/>

                        <TextView
                            android:id="@+id/tvEmail"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/myemail"
                            android:textSize="15sp"
                            android:layout_weight=".65"/>

                    </TableRow>
                    <TableRow

                        android:layout_marginTop="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/tvJudulWaktuSesi"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/waktu_sesi"
                            android:textSize="15sp"
                            android:layout_weight=".35"/>

                        <TextView
                            android:id="@+id/tvWaktuSesi"
                            android:layout_width="0dp"

                            android:layout_height="wrap_content"
                            android:text="@string/mysession"
                            android:textSize="15sp"
                            android:layout_weight=".65"/>
                    </TableRow>
                </TableLayout>
            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:id="@+id/llButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/btnEditProfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="10dp"
            android:paddingEnd="20dp"
            android:background="@drawable/button_style2"
            android:drawableEnd="@drawable/ic_baseline_edit_24"
            android:text="@string/edit_profil"
            android:textColor="@android:color/white"
            android:textSize="14sp" />
        <TextView
            android:layout_width="5dp"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btnHapusUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="10dp"
            android:paddingEnd="20dp"
            android:background="@drawable/button_style3"
            android:drawableEnd="@drawable/ic_baseline_delete_forever_24"
            android:text="@string/hapus_akun"

            android:textColor="@android:color/white"
            android:textSize="14sp" />
    </LinearLayout>
</RelativeLayout>