<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal|center_vertical"
    android:background="@drawable/repeat_background"
    tools:context=".activities.RegisterActivity">
    <androidx.cardview.widget.CardView
        android:layout_margin="30dp"
        cardCornerRadius="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@android:color/white">
                <!--Baris pertama field untuk nama -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"

                        android:background="@color/primary"
                        android:contentDescription="@string/app_name"

                        android:padding="5dp"
                        android:src="@drawable/ic_baseline_white_person_24" />

                    <EditText
                        android:id="@+id/etNama"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittextstyle2"

                        android:hint="@string/nama"
                        android:inputType="textPersonName"
                        android:autofillHints="" />

                </LinearLayout>
                <!--Baris kedua field untuk tanggal lahir -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"

                        android:background="@color/primary"
                        android:contentDescription="@string/app_name"

                        android:padding="5dp"
                        android:src="@drawable/ic_baseline_date_white_range_24"

                        />
                    <EditText
                        android:id="@+id/etTanggalLahir"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittextstyle2"

                        android:hint="@string/tanggal_lahir"

                        android:inputType="text"
                        android:autofillHints="" />

                </LinearLayout>
                <!--Baris ketiga field untuk jenis kelamin -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"

                        android:background="@color/primary"
                        android:contentDescription="@string/app_name"

                        android:padding="5dp"
                        android:src="@drawable/ic_baseline_wc_white_24" />

                    <Spinner
                        android:id="@+id/spJenisKelamin"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/edittextstyle2"
                        android:entries="@array/jenis_kelamin"
                        android:spinnerMode="dropdown" />

                </LinearLayout>
                <!--Baris kelima field untuk Nomor Handphone -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@color/primary"
                        android:contentDescription="@string/app_name"

                        android:padding="5dp"
                        android:src="@drawable/ic_baseline_white_phone_24" />

                    <EditText
                        android:id="@+id/etNomorHP"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittextstyle2"
                        android:hint="@string/no_hp"

                        android:inputType="phone"
                        android:autofillHints="" />

                </LinearLayout>
                <!--Baris keenam field untuk alamat-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="40dp"

                        android:layout_height="match_parent"
                        android:background="@color/primary"
                        android:contentDescription="@string/app_name"

                        android:padding="5dp"
                        android:src="@drawable/ic_baseline_white_home_24"/>

                    <EditText
                        android:id="@+id/etAlamat"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:background="@drawable/edittextstyle2"

                        android:hint="@string/alamat"

                        android:inputType="textCapSentences|textMultiLine"
                        android:gravity="center_vertical|start"
                        android:scrollbars="vertical"

                        android:minLines="2"
                        android:maxLines="3"
                        android:maxLength="255"
                        android:scrollHorizontally="false"/>

                </LinearLayout>
                <!--Baris keempat field untuk Email -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@color/primary"
                        android:contentDescription="@string/email"
                        android:padding="5dp"
                        android:src="@drawable/ic_email_white_24dp" />

                    <EditText
                        android:id="@+id/etEmail"

                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"

                        android:background="@drawable/edittextstyle2"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:autofillHints="" />

                </LinearLayout>
                <!--Baris ketujuh field untuk Password -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@color/primary"
                        android:contentDescription="@string/password"
                        android:padding="5dp"

                        android:src="@drawable/ic_password_white_24" />
                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittextstyle2"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:autofillHints="" />

                </LinearLayout>
                <!--Baris kedelapan field untuk Ulangi Password -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"

                        android:background="@color/primary"
                        android:contentDescription="@string/app_name"
                        android:padding="5dp"
                        android:src="@drawable/ic_password_white_24" />

                    <EditText
                        android:id="@+id/etKonfirmasiPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:background="@drawable/edittextstyle2"
                        android:hint="@string/konfirmasi_password"

                        android:inputType="textPassword"
                        android:autofillHints="" />

                </LinearLayout>
                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"

                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="25dp"
                    android:background="@drawable/button_style1"
                    android:drawableEnd="@drawable/ic_send_white_24"
                    android:text="@string/submit"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>
</LinearLayout>